[gd_scene load_steps=2 format=3 uid="uid://inbox_screen"]

[ext_resource type="Script" path="res://scripts/ui/InboxScreen.gd" id="1_script"]

[node name="InboxScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.12, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Header" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="VBoxContainer/Header"]
layout_mode = 2
size_flags_horizontal = 3
text = "üì¨ Inbox"
horizontal_alignment = 1

[node name="MarkAllReadButton" type="Button" parent="VBoxContainer/Header"]
layout_mode = 2
text = "Mark All Read"

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MessageList" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="EmptyLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "No messages"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BackButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "‚Üê Back"

[connection signal="pressed" from="VBoxContainer/Header/MarkAllReadButton" to="." method="_on_mark_all_read_pressed"]
[connection signal="pressed" from="VBoxContainer/BackButton" to="." method="_on_back_pressed"]
